# ElderLISP

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  :w  CMakeLists.txt  changelog.txt  configure_compilation_database  meson.build
app/: CMakeLists.txt  main.cpp
include/: action.hpp  ast.hpp  atomic-types.hpp  environment.hpp  eval_loop.hpp  exercisesOne.hpp  fixed-string.hpp  hello.hpp  interpreter-memory.hpp  interpreter.hpp  lexer.hpp  lib.hpp  list-utils.hpp  list.hpp  meta.hpp  parser.hpp  print-type.hpp  procedure.hpp  token.hpp  value.hpp
lib/: CMakeLists.txt  hello.cpp
pch/: interp_pch.hpp
src/: CMakeLists.txt  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  hello_tests.hpp  tests.cpp
