project('ElderLISP', 'cpp',
    version : '1.0.1',
    license : 'GPLv3',
    default_options: 'cpp_std=c++20')

inc = include_directories('include')

app_sources = ['src/main.cpp']
executable('ElderInterp',
    sources: app_sources,
    include_directories: inc)

#subprojects('subprojects')
#subdir('test')
